[dev6] made contact info, skills and ensured text doesnt overlap. now on to putting in images and 'flavour text'

--- a/styles/Lanzcontact.module.css
+++ b/styles/Lanzcontact.module.css
@@ -1,6 +1,6 @@
-.lanzintro {
+.lanzcontact {
     text-align: center;
-    height: 28%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: top;
@@ -9,18 +9,20 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 
                  'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
-    position: relative;
-}
-
-.lanzintro h1 {
-    color: white;
-    font-size: 50px;
-    margin: 0;
     width: 100%;
 }
 
-.lanzintro p{
-    color: white;
-    font-size: 25px;
-    width: 75%;
+.lanzcontact h3 {
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+}
+
+.lanzcontact ul {
+    text-align: center;
+    justify-content: top;
+}
+
+.lanzcontact p {
+    cursor: pointer;
 }
