--- a/styles/Lanzskills.module.css
+++ b/styles/Lanzskills.module.css
@@ -1,12 +1,31 @@
 .lanzskills {
+    width: 100%;
+    height: 70%;
     text-align: left;
-    height: calc(100vh - 650px);
     display: flex;
     flex-direction: column;
-    justify-content: top;
-    align-items: center;
+    justify-content: left;
+    align-items: left;
     background-color: #191023;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 
                  'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: white;
+    position: relative;
+}
+
+.lanzskills skills {
+    padding-left: 2.5%;
+}
+
+.lanzskills h2 {
+    font-size: 30px;
+}
+
+.lanzskills li {
+    font-size: 25px;
+    margin-bottom: 40px;
+}
+
+.lanzskills bold {
+    font-weight: bold;
 }
